main2 : Restoring the code that is being used in the deployment

--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -1,11 +1,13 @@
 .array-container {
     position: absolute;
+    top: 50px;
     left: 100px;
+    right: 100px;
     /* top: 100px; */
   }
   
   .array-bar {
-    width: 2px;
+    width: 4px;
     display: inline-block;
     margin: 0 1px;
   }
