--- a/src/SortingVisualizer/SortingVisualizer.css
+++ b/src/SortingVisualizer/SortingVisualizer.css
@@ -12,9 +12,9 @@
   }
   
 button {
-      color: #64ffda;
+      color: #ccd6f6;
       background-color: transparent;
-      border: 1px solid #64ffda;
+      border: 1px solid #ccd6f6;
       border-radius: var(--border-radius);
       padding: 0.75rem 1rem;
       font-family: var(--font-mono);
@@ -26,7 +26,7 @@ button {
       font-size: var(--fz-xs);
 }
 button:hover {
-  color: white;
+  color: #3dc9a8;
 }
 button:active {
   transform: scale(0.98);
